[package]
name = "s3-cdn"
version = "0.4.1" # managed by release.sh
edition = "2021"
authors = ["Scotte Zinn <scotte@zinn.ca>"]
license = "MIT"
homepage = "https://github.com/szinn/s3-cdn"
repository = "https://github.com/szinn/s3-cdn"
readme = "README.md"
rust-version = "1.77"
build = "build.rs"

[[bin]]
name = "s3-cdn"
path = "src/main.rs"

[lib]
name = "s3_cdn"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
axum = "0.8.0"
bytes = "1.6.0"
config = "0.15.0"
log = "0.4.21"
mime_guess = "2.0.4"
minio = "0.1.0"
thiserror = "2.0.0"
tokio-graceful-shutdown = "0.15.0"
tracing-log = "0.2.0"

[dependencies.clap]
version = "4.5.4"
features = ["cargo", "derive"]

[dependencies.hyper]
version = "1.3.1"
features = ["full"]

[dependencies.hyper-util]
version = "0.1.3"
features = ["tokio", "server-auto", "http1"]

[dependencies.reqwest]
version = "0.12.4"
features = ["native-tls", "blocking", "rustls-tls", "stream"]

[dependencies.serde]
version = "1.0.200"
features = ["derive"]

[dependencies.tokio]
version = "1.37.0"
default-features = false
features = ["full"]

[dependencies.tower]
version = "0.5.0"
features = ["util"]

[dependencies.tower-http]
version = "0.6.0"
features = ["timeout", "trace"]

[dependencies.tracing]
version = "0.1.40"
features = ["log"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["std", "fmt", "registry", "env-filter", "json"]
